--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,12 +10,12 @@ const MAX_POSTS = 5 // max number of posts to show on the home page
 const posts = await getPosts(MAX_POSTS)
 ---
 
-<BaseLayout title='Home'>
+<BaseLayout title='Beranda'>
 	<TitlePage title={siteConfig.title} />
 	<ListCategories />
 
 	<div>
-		<h2 class='text-lg font-medium tracking-wide text-end'>Latest Posts</h2>
+		<h2 class='text-lg font-medium tracking-wide text-end'>Postingan Terbaru</h2>
 		<ListPosts FirstBig={true} posts={posts} />
 	</div>
 </BaseLayout>
