--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -5,8 +5,8 @@ import { getTags } from '@/utils'
 const tags = await getTags()
 ---
 
-<BaseLayout title='Tags'>
-	<TitlePage title='Tags' />
+<BaseLayout title='Daftar Tag'>
+	<TitlePage title='Daftar Tag' />
 	<div class='flex justify-center flex-wrap gap-4'>
 		{
 			tags.map((tag) => (
