--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,5 +6,9 @@ const today = new Date()
 
 <footer class='flex justify-center items-center w-full px-16 h-28 border-t-2'>
 	&copy; {today.getFullYear()}
-	{siteConfig.author}. All rights reserved.
+	{siteConfig.author}. All rights reserved. | Dev by&nbsp<a
+		href='https://farrosfr.com'
+		target='_blank'
+		class='underline'>FarrosFR</a
+	>
 </footer>
